# claude-dashboard

./: .claude-base-files  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  clanker-prep  clanker-run  clanker-setup  config.yaml  generate-data.py  setup-remotes  spawner.py  ws-server.py
.claude/: settings.json
.github/workflows/: build.yml  deploy.yml  package.yml  pages-preview.yml  pages.yml
claude/: questions.md
claude/context/: check_fix.py  check_limit.py  check_limit2.py  check_limit3.py  check_limit4.py  check_limit5.py  check_limit6.py  extract_clone.py  git_status.yaml  github_issues.yaml  pipeline_results.yaml  seen_issue_comment_ids.yaml  seen_pipeline_run_ids.yaml  session.yaml  session_2026-04-05.yaml  session_2026-04-06.yaml  session_2026-04-07.yaml
claude/design/: base.md  claude-base.md  machine-readable-outputs.md
docs/: index.html  style.css
etc/init.d/: claude-dashboard  claude-dashboard-ws
nginx/: clanker.conf  dashboard.conf  proxy.conf
packaging/: APKBUILD  clanker.conf  claude-dashboard-cron  claude-dashboard-ws.openrc  claude-dashboard.openrc
src/: lib.rs
www/: dashboard.css  dashboard.js  index.template.html
