[package]
name = "claude-dashboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
# CBOR parsing
ciborium = "0.2"
# Serialization helper
serde = { version = "1", features = ["derive"] }

[profile.release]
# Minimise WASM binary size
opt-level = "z"
lto = true
